--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <li><a href="/">11 (000) 111-11-11</a></li>
     </ul>
     </nav>
+    <ul>
+        <li><a href="/">info@devstudio.com</a></li>
+        <li><a href="/">11 (000) 111-11-11</a></li>
+    </ul>
 
 </header>
 <body>
